--- a/config/sync/core.entity_view_display.node.publications_reports.puplications_media.yml
+++ b/config/sync/core.entity_view_display.node.publications_reports.puplications_media.yml
@@ -7,7 +7,9 @@ dependencies:
     - field.field.node.publications_reports.body
     - field.field.node.publications_reports.field_attachment
     - field.field.node.publications_reports.field_image
+    - field.field.node.publications_reports.field_listing_page
     - field.field.node.publications_reports.field_pr_select_type
+    - field.field.node.publications_reports.field_weight
     - image.style.wide
     - node.type.publications_reports
   module:
@@ -64,4 +66,6 @@ content:
     weight: 100
     region: content
 hidden:
+  field_listing_page: true
+  field_weight: true
   langcode: true
