--- a/config/sync/flag.flag.only_like.yml
+++ b/config/sync/flag.flag.only_like.yml
@@ -13,7 +13,7 @@ global: false
 flag_short: 'Yes'
 flag_long: ''
 flag_message: ''
-unflag_short: .....
+unflag_short: Selected
 unflag_long: ''
 unflag_message: ''
 unflag_denied_text: ''
