--- a/config/sync/views.view.faqs.yml
+++ b/config/sync/views.view.faqs.yml
@@ -319,6 +319,7 @@ display:
           replica: false
           query_tags: {  }
       relationships: {  }
+      use_ajax: false
       header: {  }
       footer: {  }
       display_extenders: {  }
