--- a/config/sync/core.entity_view_display.node.media_images.default.yml
+++ b/config/sync/core.entity_view_display.node.media_images.default.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.field.node.media_images.body
     - field.field.node.media_images.field_banner
+    - field.field.node.media_images.field_general_weight
     - field.field.node.media_images.field_sh_images
     - node.type.media_images
   module:
@@ -38,6 +39,15 @@ content:
       svg_render_as_image: true
     third_party_settings: {  }
     weight: 102
+    region: content
+  field_general_weight:
+    type: number_integer
+    label: above
+    settings:
+      thousand_separator: ''
+      prefix_suffix: true
+    third_party_settings: {  }
+    weight: 111
     region: content
   field_sh_images:
     type: image
