--- a/config/sync/core.entity_view_display.node.publications_reports.default.yml
+++ b/config/sync/core.entity_view_display.node.publications_reports.default.yml
@@ -6,7 +6,9 @@ dependencies:
     - field.field.node.publications_reports.body
     - field.field.node.publications_reports.field_attachment
     - field.field.node.publications_reports.field_image
+    - field.field.node.publications_reports.field_listing_page
     - field.field.node.publications_reports.field_pr_select_type
+    - field.field.node.publications_reports.field_weight
     - image.style.wide
     - node.type.publications_reports
   module:
@@ -50,12 +52,28 @@ content:
     third_party_settings: {  }
     weight: -1
     region: content
+  field_listing_page:
+    type: list_default
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    weight: 112
+    region: content
   field_pr_select_type:
     type: list_default
     label: above
     settings: {  }
     third_party_settings: {  }
     weight: 103
+    region: content
+  field_weight:
+    type: number_integer
+    label: above
+    settings:
+      thousand_separator: ''
+      prefix_suffix: true
+    third_party_settings: {  }
+    weight: 105
     region: content
   links:
     settings: {  }
