--- a/config/sync/core.entity_view_display.node.publications_reports.teaser.yml
+++ b/config/sync/core.entity_view_display.node.publications_reports.teaser.yml
@@ -7,7 +7,9 @@ dependencies:
     - field.field.node.publications_reports.body
     - field.field.node.publications_reports.field_attachment
     - field.field.node.publications_reports.field_image
+    - field.field.node.publications_reports.field_listing_page
     - field.field.node.publications_reports.field_pr_select_type
+    - field.field.node.publications_reports.field_weight
     - image.style.medium
     - node.type.publications_reports
   module:
@@ -59,10 +61,20 @@ content:
     third_party_settings: {  }
     weight: 3
     region: content
+  field_weight:
+    type: number_integer
+    label: above
+    settings:
+      thousand_separator: ''
+      prefix_suffix: true
+    third_party_settings: {  }
+    weight: 6
+    region: content
   links:
     settings: {  }
     third_party_settings: {  }
     weight: 0
     region: content
 hidden:
+  field_listing_page: true
   langcode: true
