--- a/config/sync/core.entity_view_display.node.regulations.default.yml
+++ b/config/sync/core.entity_view_display.node.regulations.default.yml
@@ -10,7 +10,7 @@ dependencies:
   module:
     - file
     - options
-    - text
+    - smart_trim
     - user
 id: node.regulations.default
 targetEntityType: node
@@ -18,9 +18,26 @@ bundle: regulations
 mode: default
 content:
   body:
-    type: text_default
+    type: smart_trim
     label: hidden
-    settings: {  }
+    settings:
+      trim_length: 120
+      trim_type: chars
+      trim_suffix: ...
+      wrap_output: false
+      wrap_class: trimmed
+      more:
+        display_link: false
+        target_blank: false
+        link_trim_only: false
+        class: more-link
+        text: More
+        aria_label: 'Read more about [node:title]'
+      summary_handler: full
+      trim_options:
+        text: true
+        trim_zero: true
+        replace_tokens: false
     third_party_settings: {  }
     weight: 101
     region: content
