--- a/config/sync/core.entity_view_display.node.regulations.teaser.yml
+++ b/config/sync/core.entity_view_display.node.regulations.teaser.yml
@@ -11,7 +11,7 @@ dependencies:
   module:
     - file
     - options
-    - text
+    - smart_trim
     - user
 id: node.regulations.teaser
 targetEntityType: node
@@ -19,10 +19,26 @@ bundle: regulations
 mode: teaser
 content:
   body:
-    type: text_summary_or_trimmed
+    type: smart_trim
     label: hidden
     settings:
-      trim_length: 600
+      trim_length: 100
+      trim_type: chars
+      trim_suffix: ...
+      wrap_output: false
+      wrap_class: trimmed
+      more:
+        display_link: false
+        target_blank: false
+        link_trim_only: false
+        class: more-link
+        text: More
+        aria_label: 'Read more about [node:title]'
+      summary_handler: trim
+      trim_options:
+        text: true
+        trim_zero: true
+        replace_tokens: false
     third_party_settings: {  }
     weight: 2
     region: content
