--- a/config/sync/core.entity_view_display.node.services.services_statistics.yml
+++ b/config/sync/core.entity_view_display.node.services.services_statistics.yml
@@ -9,6 +9,7 @@ dependencies:
     - field.field.node.services.field_general_weight
     - field.field.node.services.field_image
     - field.field.node.services.field_kpi_stat_card
+    - field.field.node.services.field_listing_page
     - field.field.node.services.field_service_detail_item
     - field.field.node.services.field_services_type
     - field.field.node.services.field_sh_icon
@@ -16,9 +17,9 @@ dependencies:
     - field.field.node.services.field_short_title
     - field.field.node.services.field_steps
     - field.field.node.services.field_weight
-    - image.style.wide
     - node.type.services
   module:
+    - image_class
     - options
     - svg_image
     - text
@@ -33,14 +34,14 @@ content:
     label: hidden
     settings: {  }
     third_party_settings: {  }
-    weight: 101
+    weight: 2
     region: content
   field_font_icon:
     type: list_default
     label: above
     settings: {  }
     third_party_settings: {  }
-    weight: 106
+    weight: 6
     region: content
   field_image:
     type: image
@@ -50,8 +51,12 @@ content:
       image_style: wide
       image_loading:
         attribute: eager
+      svg_attributes:
+        width: null
+        height: null
+      svg_render_as_image: true
     third_party_settings: {  }
-    weight: -1
+    weight: 0
     region: content
   field_services_type:
     type: entity_reference_label
@@ -59,7 +64,24 @@ content:
     settings:
       link: true
     third_party_settings: {  }
-    weight: 104
+    weight: 4
+    region: content
+  field_sh_icon:
+    type: image
+    label: hidden
+    settings:
+      image_link: ''
+      image_style: ''
+      image_loading:
+        attribute: lazy
+      svg_attributes:
+        width: 48
+        height: 54
+      svg_render_as_image: true
+    third_party_settings:
+      image_class:
+        class: ''
+    weight: 7
     region: content
   field_short_title:
     type: string
@@ -67,7 +89,7 @@ content:
     settings:
       link_to_entity: false
     third_party_settings: {  }
-    weight: 102
+    weight: 3
     region: content
   field_weight:
     type: number_integer
@@ -76,18 +98,18 @@ content:
       thousand_separator: ''
       prefix_suffix: true
     third_party_settings: {  }
-    weight: 105
+    weight: 5
     region: content
   links:
     settings: {  }
     third_party_settings: {  }
-    weight: 100
+    weight: 1
     region: content
 hidden:
   field_general_weight: true
   field_kpi_stat_card: true
+  field_listing_page: true
   field_service_detail_item: true
-  field_sh_icon: true
   field_sh_images: true
   field_steps: true
   langcode: true
